# llm-edge

./: README.md  docker-compose.yaml
edgedemo/: README.md  main.py  main.py~  pyproject.toml
src/: Makefile  README.md  pyproject.toml
src/edgedemo/: cli.py  detection.py  inference.py
test/: test_detection.py
ui/: .gitignore  README.md  app.js  components.js  index.html  main.js  package-lock.json  package.json  preload.js  styles.css
ui/.devcontainer/: README.md  devcontainer.json
