[project]
name = "yolo-llm-edge"
version = "0.1.0"
description = "YOLO object detection combined with LLM-edge (BitNet) for efficient reasoning on edge devices"
authors = [
    { name = "Your Name", email = "you@example.com" }
]

readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "ultralytics>=8.3.195",
]

[project.urls]
homepage = "https://github.com/your-org/yolo-llm-edge"
repository = "https://github.com/your-org/yolo-llm-edge/issues"


[tool.ruff]
# Target Google Python Style Guide
line-length = 88
indent-width = 4
target-version = "py39"

# Enable core linting rules
select = [
    "E",   # pycodestyle (PEP 8 errors)
    "F",   # pyflakes
    "I",   # isort (imports)
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # bugbear (common pitfalls)
]

# Ignore some overly strict rules (Google style doesn’t require them)
ignore = [
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D203",  # One blank line before class (Google prefers D211)
    "D212",  # Multi-line docstring should start immediately after quotes
]

# Enforce import sorting
[tool.ruff.isort]
known-first-party = ["yolo_llm_edge"]
combine-as-imports = true

# Configure pydocstyle to use Google convention
[tool.ruff.pydocstyle]
convention = "google"

# Per-file ignores (e.g., tests don’t always need docstrings)
[tool.ruff.per-file-ignores]
"tests/*" = ["D"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
    "ruff>=0.12.12",
]

