[project]
name = "yolo-llm-edge"
version = "0.1.0"
description = "YOLO object detection combined with LLM-edge (BitNet) for efficient reasoning on edge devices"
authors = [
    { name = "Giorgio Zoppi", email = "gzoppi@proton.me" },
    { name = "Simone Giorgio", email = "giorgi.simon@gmail.com"}
]

readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.17.4",
    "ultralytics>=8.3.195",   
]

[tool.ruff]
# Target Google Python Style Guide
line-length = 100
indent-width = 4
target-version = "py311"

# Enable core linting rules
lint.select = [
    "E",   # pycodestyle (PEP 8 errors)
    "F",   # pyflakes
    "I",   # isort (imports)
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # bugbear (common pitfalls)
]

# Ignore some overly strict rules (Google style doesn’t require them)
lint.ignore = [
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D203",  # One blank line before class (Google prefers D211)
    "D212",  # Multi-line docstring should start immediately after quotes
]

# Configure pydocstyle to use Google convention
[tool.ruff.pydocstyle]
convention = "google"

# Per-file ignores (e.g., tests don’t always need docstrings)
[tool.ruff.per-file-ignores]
"tests/*" = ["D"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
    "ruff>=0.12.12",
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
llm-edge = "edgedemo.cli:app"

